k8s/lab-app/20-service-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: lab-app
  namespace: lab
spec:
  clusterIP: None
  selector:
    app: lab-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
