k8s/lab-app/40-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-app
  namespace: lab
spec:
  ingressClassName: traefik
  rules:
    - host: app.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab-app
                port:
                  number: 80
